- Universal solvent now removes encased debuffs from NPCs and grants glue resist to NPC/player for 30 turns
- Being hit by an Observer's beam now attracts the Shadow to your position
- The shadow now properly applies a cursed item when she catches you
- Calling a guard should now pick an eligible character on the map instead of spawning one
- Enchant Rope now affects NPC restraints properly

5.4.3
- No longer need to pass room escape method to backtrack
- dragon girls and dragon queens can no longer spawn as bounties for the Bounty escape method

5.4.2
- Added 'spike' trap

5.3.50
- More sound effects
- Giving Good Girl Gifts to NPCs will now temporarily increase their submissiveness
- Field of Frost has been split into progressively bigger upcasts.

5.3.49
- Cursed item offer from enemies now includes a real curse
- Added more enemy journal entries
- Fixed the names of many spells not being defined

5.3.48
- MODDERS: Added "OverCorset", "UpperArmStrapsBack", TightSleeveLeft/Right, and "Apron" layer
- Added heavy maid knight uniform

5.3.47
- Several weapons now have a special property dealing 50% additional damage when stamina is over 50%:
- Hammer (and variants)
- Axe (and variants)
- Rock
- Fixed an issue where leashed NPCs didnt follow player properly thru stairs
- Battle Rhythm now uses the higher of original stamina cost or effective stamina cost
- New weapon: Sledgehammer
- Telekinesis must now go in the hotbar to be used, but can be toggled

5.3.46
- Require being in summit to deposit restraints to summit warden
- Fix misleading message when NPCs try to escape even if they made no progress
- Show sprint cost when sprint icon shows on map
- Sprint cost now 20 base, 25 heeled, 15 hop, 20 hop (slowed), 25 hop (super slowed). Overall buff while bound, nerf while free
- Added quick faccility assigning

5.3.45
- Summit warden now knows how to use generic bondage like rope
- Add button to toggle big render of collection character
- Small bugfixes

5.3.44